fix misalignment

--- a/src/components/PageComponents/ProfilePage/MentionList/style.module.scss
+++ b/src/components/PageComponents/ProfilePage/MentionList/style.module.scss
@@ -10,6 +10,10 @@
   margin-inline: auto;
   padding: $spacing;
 
+  > span {
+    margin-top: 0.5rem;
+  }
+
   > h2 {
     text-align: center;
     margin-bottom: $spacing;
